--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -301,6 +301,10 @@
     padding: 8px 0;
   }
 
+  &.framed {
+    border: solid 1px var(--color-solid-2) !important;
+  }
+
   margin-bottom: 16px;
   @include media-breakpoint-up(sm) {
     border-radius: 6px;
