--- a/src/scss/components/_board-tabs.scss
+++ b/src/scss/components/_board-tabs.scss
@@ -24,30 +24,34 @@
     border: none;
     background: transparent;
     padding: 6px 10px;
-    min-width: 40px;
+    min-width: 42px;
     max-width: 200px;
     width: auto;
     flex-shrink: 0;
-    height: 50px;
+    height: 40px;
+    margin-top: 6px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
     &.active {
+      background-color: var(--color-solid);
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 6px 7px -2px rgba($primaryBright, 0.1);
+      border-radius: 12px;
       // border-bottom: solid 2px var(--color-primary-bright);
-      &:before {
-        content: "";
-        position: absolute;
-        top: 45px;
-        z-index: 100;
-        left: 0;
-        right: 0;
-        height: 4px;
-        border-radius: 2px;
-        background-color: var(--color-primary-bright);
-        box-shadow: 0px 2px 10px rgba($primaryBright, 0.4);
-      }
+      // &:before {
+      //   content: "";
+      //   position: absolute;
+      //   top: 45px;
+      //   z-index: 100;
+      //   left: 0;
+      //   right: 0;
+      //   height: 4px;
+      //   border-radius: 2px;
+      //   background-color: var(--color-primary-bright);
+      //   box-shadow: 0px 2px 10px rgba($primaryBright, 0.4);
+      // }
     }
     &:last-child {
       &.active {
