--- a/public/main.css
+++ b/public/main.css
@@ -4947,6 +4947,12 @@ button:focus {
 .btn-sm, .btn-group-sm > .btn {
   border-radius: 6pt !important; }
 
+.btn-xs {
+  font-size: 0.65rem !important;
+  padding: 2px 8px;
+  text-transform: uppercase;
+  font-weight: bold; }
+
 .btn:disabled {
   opacity: 0.3; }
 
@@ -5064,9 +5070,13 @@ button:focus {
     background-color: var(--color-primary); }
 
 .btn-light {
-  background-color: var(--color-faded); }
+  background-color: var(--color-solid);
+  box-shadow: var(--box-shadow-tight);
+  border: none;
+  color: var(--color-primary-bright); }
   .btn-light:hover {
-    background-color: var(--color-faded-2); }
+    background-color: var(--color-solid-1);
+    color: var(--color-primary); }
 
 .btn-circle {
   width: 40px;
@@ -5349,50 +5359,6 @@ body.theme-dark {
   --input-background: #111;
   --input-focus-background: #000;
   --color-translucent: rgba(0, 0, 0, 0.79); }
-  body.theme-dark .btn-light {
-    color: #fff;
-    background-color: #333;
-    border-color: #262626; }
-    body.theme-dark .btn-light:hover {
-      color: #fff;
-      background-color: #262626;
-      border-color: #262626; }
-    body.theme-dark .btn-light:focus, body.theme-dark .btn-light.focus {
-      box-shadow: 0 0 0 0.2rem rgba(71, 71, 71, 0.5); }
-    body.theme-dark .btn-light.disabled, body.theme-dark .btn-light:disabled {
-      color: #fff;
-      background-color: #333;
-      border-color: #262626; }
-    body.theme-dark .btn-light:not(:disabled):not(.disabled):active, body.theme-dark .btn-light:not(:disabled):not(.disabled).active,
-    .show > body.theme-dark .btn-light.dropdown-toggle {
-      color: #fff;
-      background-color: #319ed7;
-      border-color: #060606; }
-      body.theme-dark .btn-light:not(:disabled):not(.disabled):active:focus, body.theme-dark .btn-light:not(:disabled):not(.disabled).active:focus,
-      .show > body.theme-dark .btn-light.dropdown-toggle:focus {
-        box-shadow: 0 0 0 0.2rem rgba(71, 71, 71, 0.5); }
-    body.theme-dark .btn-light:hover {
-      color: #fff;
-      background-color: #333;
-      border-color: #1a1a1a; }
-      body.theme-dark .btn-light:hover:hover {
-        color: #fff;
-        background-color: #1a1a1a;
-        border-color: #1a1a1a; }
-      body.theme-dark .btn-light:hover:focus, body.theme-dark .btn-light:hover.focus {
-        box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
-      body.theme-dark .btn-light:hover.disabled, body.theme-dark .btn-light:hover:disabled {
-        color: #fff;
-        background-color: #333;
-        border-color: #1a1a1a; }
-      body.theme-dark .btn-light:hover:not(:disabled):not(.disabled):active, body.theme-dark .btn-light:hover:not(:disabled):not(.disabled).active,
-      .show > body.theme-dark .btn-light:hover.dropdown-toggle {
-        color: #fff;
-        background-color: #319ed7;
-        border-color: black; }
-        body.theme-dark .btn-light:hover:not(:disabled):not(.disabled):active:focus, body.theme-dark .btn-light:hover:not(:disabled):not(.disabled).active:focus,
-        .show > body.theme-dark .btn-light:hover.dropdown-toggle:focus {
-          box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
 
 .truncate {
   overflow: hidden;
