--- a/public/main.css
+++ b/public/main.css
@@ -4949,7 +4949,7 @@ button:focus {
 
 .btn-xs {
   font-size: 0.65rem !important;
-  padding: 2px 8px;
+  padding: 2px 10px;
   text-transform: uppercase;
   font-weight: bold; }
 
@@ -5073,7 +5073,7 @@ button:focus {
   background-color: var(--color-solid);
   box-shadow: var(--box-shadow-tight);
   border: none;
-  color: var(--color-primary-bright); }
+  color: var(--color-inverse); }
   .btn-light:hover {
     background-color: var(--color-solid-1);
     color: var(--color-primary); }
@@ -5361,16 +5361,16 @@ body.theme-dark {
   --color-translucent: rgba(0, 0, 0, 0.79); }
 
 .truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   overflow: hidden !important;
-  display: block;
+  display: -webkit-box;
   max-width: 100%; }
 
 .truncate-2 {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden !important;
   display: -webkit-box; }
@@ -6856,11 +6856,11 @@ aside.n-panel {
     padding-right: 24px; }
   .n-tracker-value-grid-button.truncate .label {
     max-width: calc(100% - 1px);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
     overflow: hidden !important;
-    display: block; }
+    display: -webkit-box; }
   .n-tracker-value-grid-button .label {
     text-align: left;
     font-weight: 500;
@@ -6871,11 +6871,11 @@ aside.n-panel {
     line-height: 1.2rem;
     text-align: left;
     font-weight: 600;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
     overflow: hidden !important;
-    display: block; }
+    display: -webkit-box; }
   .n-tracker-value-grid-button.novalue .value {
     display: none; }
   .n-tracker-value-grid-button.size-xs {
