--- a/src/scss/base/_animate.scss
+++ b/src/scss/base/_animate.scss
@@ -1,3 +1,14 @@
+@keyframes fadeUp {
+  from {
+    transform: translateY(8px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .animate {
   transition: all 0.2s ease-in-out;
   &.hidden {
