feat: adding patreon to settings page

--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -75,19 +75,19 @@
   background-color: transparent;
 }
 .text-inverse {
-  color: var(--color-inverse);
+  color: var(--color-inverse) !important;
 }
 .text-inverse-1 {
-  color: var(--color-inverse-1);
+  color: var(--color-inverse-1) !important;
 }
 .text-inverse-2 {
-  color: var(--color-inverse-2);
+  color: var(--color-inverse-2) !important;
 }
 .text-dark {
-  color: var(--color-dark);
+  color: var(--color-dark) !important;
 }
 .text-inverse-3 {
-  color: var(--color-inverse-3);
+  color: var(--color-inverse-3) !important;
 }
 .text-white {
   color: #fff;
