--- a/src/scss/components/_board-tabs.scss
+++ b/src/scss/components/_board-tabs.scss
@@ -1,7 +1,6 @@
 @import "../utils/variables";
 .n-board-tabs {
-  // background-color: var(--header-background);
-  // backdrop-filter: saturate(180%) blur(20px);
+  padding-left: 16px;
   width: 100%;
   min-height: 50px;
   -webkit-overflow-scrolling: touch;
@@ -18,13 +17,17 @@
     color: var(--color-inverse-2);
     z-index: 10;
   }
+  .tap-icon {
+    margin-top: 6px !important;
+    flex-grow: 1;
+  }
 
   .tab {
     color: var(--color-inverse-2);
     border: none;
     background: transparent;
     padding: 6px 10px;
-    min-width: 42px;
+    min-width: 45px;
     max-width: 200px;
     width: auto;
     flex-shrink: 0;
@@ -35,7 +38,9 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-    &.active {
+    text-align: center;
+
+    &.selected {
       background-color: var(--color-solid);
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 6px 7px -2px rgba($primaryBright, 0.1);
       border-radius: 12px;
