style: general style updates

--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -15,6 +15,10 @@ body {
   // padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
+.w-50 {
+  width: 50%;
+}
+
 body.no-scroll {
   overflow: hidden;
   position: fixed;
