--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -58,6 +58,12 @@
 .fill-inverse {
   fill: var(--color-inverse) !important;
 }
+.fill-inverse-1 {
+  fill: var(--color-inverse-1) !important;
+}
+.fill-inverse-2 {
+  fill: var(--color-inverse-2) !important;
+}
 .fill-primary {
   fill: var(--color-primary) !important;
 }
