--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -29,9 +29,9 @@
   display: flex;
   align-items: center;
   justify-content: stretch;
-  padding: 4px 8pt;
+  padding: 10px 12px;
   cursor: pointer;
-  min-height: 50px;
+  min-height: 46px;
   max-width: 100vw;
   position: relative;
   transition: all 0.2s ease-in-out;
@@ -298,7 +298,7 @@
     border-radius: 12pt;
     overflow: hidden;
     background-color: var(--color-solid);
-    padding: 8px 0;
+    padding: 0px 0;
   }
 
   &.framed {
