style: dashboard and board tabs improvements

--- a/src/scss/base/_clickable.scss
+++ b/src/scss/base/_clickable.scss
@@ -10,7 +10,7 @@
     pointer-events: none;
     background-color: var(--color-inverse-3);
     opacity: 0;
-    border-radius: 8pt;
+    // border-radius: 8pt;
   }
 }
 .clickable:active {
