--- a/src/scss/components/_board-tabs.scss
+++ b/src/scss/components/_board-tabs.scss
@@ -3,9 +3,11 @@
   width: 100%;
   min-height: 50px;
   -webkit-overflow-scrolling: touch;
-  height: 50px;
+
   box-shadow: inset 3px 0px 4px rgba(0, 0, 0, 0);
   transition: all 0.2s ease-in-out;
+
+  background-color: var(--color-solid);
 
   &:not([data-scroll="0"]) {
     box-shadow: inset 2px 0px 1px var(--color-faded) !important;
@@ -22,40 +24,40 @@
   }
 
   .tab {
-    color: var(--color-inverse-2);
+    color: var(--color-inverse-3);
     border: none;
     background: transparent;
     padding: 6px 10px;
     min-width: 45px;
-    max-width: 260px;
+    max-width: 120px;
     width: auto;
     flex-shrink: 0;
     height: 40px;
-    margin-top: 6px;
+    margin-top: 10px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-grow: 1;
+    flex-grow: 0;
     text-align: center;
-
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    font-size: 0.9rem;
+    transition: all 0.2s ease-in-out;
     &.selected {
-      background-color: var(--color-solid);
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 6px 7px -2px rgba($primaryBright, 0.1);
-      border-radius: 12px;
+      background-color: var(--color-bg);
+      color: var(--color-inverse);
+      // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 6px 7px -2px rgba($primaryBright, 0.1);
       // border-bottom: solid 2px var(--color-primary-bright);
-      // &:before {
-      //   content: "";
-      //   position: absolute;
-      //   top: 45px;
-      //   z-index: 100;
-      //   left: 0;
-      //   right: 0;
-      //   height: 4px;
-      //   border-radius: 2px;
-      //   background-color: var(--color-primary-bright);
-      //   box-shadow: 0px 2px 10px rgba($primaryBright, 0.4);
-      // }
+      &:before {
+        content: "";
+        position: absolute;
+        bottom: 45px;
+        z-index: 100;
+        height: 4px;
+        background-color: var(--color-solid);
+        background-color: red !important;
+      }
     }
     &:last-child {
       &.active {
