--- a/public/main.css
+++ b/public/main.css
@@ -6652,6 +6652,10 @@ body.scrolling .n-tracker-button {
   align-items: flex-start;
   justify-content: space-evenly; }
 
+.n-grid-split {
+  display: grid;
+  grid-template-rows: 1fr 1fr; }
+
 .n-grid.framed {
   background-color: var(--color-solid-2);
   width: calc(100% - 16pt);
