--- a/public/main.css
+++ b/public/main.css
@@ -4932,7 +4932,7 @@ button:focus {
     font-size: 0.6rem !important;
     padding: 0pt 8pt 0pt 8pt;
     text-transform: uppercase;
-    font-weight: bold; }
+    font-weight: 500; }
     .btn-badge.btn-xs svg {
       width: 20px !important;
       margin-right: -4px; }
@@ -4941,6 +4941,12 @@ button:focus {
 
 .btn-group .btn {
   font-size: 0.75rem !important; }
+  .btn-group .btn:first-child {
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px; }
+  .btn-group .btn:last-child {
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px; }
   .btn-group .btn:active {
     color: var(--color-primary) !important; }
 
@@ -5838,11 +5844,18 @@ select {
   touch-action: manipulation; }
   .clickable:after,
   [clickable]:after {
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
     content: "";
     pointer-events: none;
-    background-color: var(--color-inverse-3);
-    opacity: 0; }
+    background-color: var(--color-primary-bright);
+    opacity: 0;
+    position: absolute;
+    top: -10px;
+    bottom: -10px;
+    right: -10px;
+    left: -10px;
+    border-radius: 20px;
+    transform: scale(0.6); }
 
 .clickable:active {
   touch-action: manipulation;
@@ -5851,12 +5864,8 @@ select {
   .clickable:active:after {
     content: "";
     position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    opacity: 0.6;
-    background-color: var(--color-inverse-3); }
+    transform: scale(1);
+    opacity: 0.2; }
 
 .container-sm {
   max-width: 800px;
