--- a/src/scss/base/_clickable.scss
+++ b/src/scss/base/_clickable.scss
@@ -5,11 +5,19 @@
   cursor: pointer;
   touch-action: manipulation;
   &:after {
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
     content: "";
     pointer-events: none;
-    background-color: var(--color-inverse-3);
+    // background-color: var(--color-inverse-3);
+    background-color: var(--color-primary-bright);
     opacity: 0;
+    position: absolute;
+    top: -10px;
+    bottom: -10px;
+    right: -10px;
+    left: -10px;
+    border-radius: 20px;
+    transform: scale(0.6);
     // border-radius: 8pt;
   }
 }
@@ -20,11 +28,7 @@
   &:after {
     content: "";
     position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    opacity: 0.6;
-    background-color: var(--color-inverse-3);
+    transform: scale(1);
+    opacity: 0.2;
   }
 }
