--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -31,6 +31,7 @@ body.no-scroll {
 body {
   overflow: hidden;
   --color-darkest: #fff;
+  --color-darkest-translucent: rgba(255, 255, 255, 0.89);
   --color-bg: #eeeeee;
   --space-gap: #{$gap};
   --color-input-background: rgba(0, 0, 0, 0.1);
@@ -105,6 +106,7 @@ body.test {
   --header-background: #111;
   --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
+  --color-darkest-translucent: rgba(0, 0, 0, 0.7);
   --color-darkest: #000;
   --color-bg: rgb(5, 5, 5);
   --color-solid: rgb(25, 25, 25);
