--- a/src/scss/components/_capture-log.scss
+++ b/src/scss/components/_capture-log.scss
@@ -17,7 +17,7 @@
       align-items: center;
       justify-content: stretch;
       .n-item {
-        max-width: 32%;
+        // max-width: 32%;
         flex-grow: 1;
         flex-shrink: 1;
         min-height: 45px;
