--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: stretch;
-  padding: 10px 12px;
+  padding: 10px 16px;
   cursor: pointer;
   min-height: 46px;
   max-width: 100vw;
@@ -53,9 +53,9 @@
 
   &.solo,
   &[solo] {
-    width: calc(100% - 16pt);
-    margin: 8pt;
-    border-radius: 8pt;
+    width: calc(100% - 16px);
+    margin: 8px;
+    border-radius: 8px;
     box-shadow: var(--box-shadow);
     .right .btn-clear {
       margin-right: 0px !important;
@@ -72,8 +72,8 @@
   }
 
   .trackers-list .n-item {
-    padding-left: 16pt !important;
-    padding-right: 16pt !important;
+    padding-left: 16px !important;
+    padding-right: 16px !important;
     .main {
       // font-size: 1rem;
     }
@@ -140,8 +140,8 @@
     align-items: center;
   }
   .left {
-    padding-right: 8pt;
-    margin-right: 4pt;
+    padding-right: 16px;
+    margin-right: 8px;
   }
   .right {
     text-align: right;
@@ -292,10 +292,10 @@
 .n-list {
   &.solo,
   [solo] {
-    width: calc(100% - 16pt);
-    margin: 8pt;
+    width: calc(100% - 16px);
+    margin: 8px;
     box-shadow: var(--box-shadow);
-    border-radius: 12pt;
+    border-radius: 12px;
     overflow: hidden;
     background-color: var(--color-solid);
     padding: 0px 0;
