--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -46,7 +46,7 @@ body {
   overflow: hidden;
   --color-darkest: #fff;
   --color-darkest-translucent: rgba(255, 255, 255, 0.89);
-  --color-bg: #f8f8f8;
+  --color-bg: #eee;
   --space-gap: #{$gap};
   --color-input-background: rgba(0, 0, 0, 0.1);
   --tracker-background: #fff;
