--- a/src/scss/components/_n-log-item.scss
+++ b/src/scss/components/_n-log-item.scss
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   padding: 0 6px 10px;
   justify-content: flex-start;
+  padding: 6px;
   button {
     width: calc(50% - 1px);
     min-height: 70px;
@@ -16,7 +17,7 @@
 .n-tracker-value-grid-button {
   justify-content: flex-start;
   // box-shadow: var(--box-shadow-float);
-  padding: 0;
+  padding: 0 0 0;
   min-height: 50px;
 
   &:active {
@@ -82,29 +83,31 @@
   * {
     // border: solid 1px rgba(blue, 0.2) !important;
   }
-  width: calc(100% - 16pt);
-  margin: 16pt 8pt;
+  width: calc(100% - 16px);
+  margin: 16px 8px;
   padding: 0px;
-  border-radius: 16pt;
+  border-radius: 16px;
   overflow: hidden;
   box-shadow: var(--box-shadow);
   .time-row {
-    padding: 8pt 16pt;
-    .date-ago {
-      font-size: 10pt;
-      opacity: 0.5;
-    }
+    padding: 8px 16px 16px;
+    border-bottom: solid 1px var(--color-solid-1);
+    margin-bottom: 2px;
   }
 
   .main {
     padding-left: 0;
   }
 
+  .context.n-row {
+    background-color: var(--color-solid-half);
+  }
+
   .n-note-textualized {
-    padding: 16pt !important;
+    padding: 16px !important;
     font-size: 1.1rem;
     line-height: 136%;
-    border-top: solid 1px var(--color-solid-2);
+
     &.long-note {
       font-size: 0.97rem;
     }
