--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -82,6 +82,18 @@ body {
   --input-background: #eee;
   --input-focus-background: #fff;
 
+  --color-grey-0: rgb(5, 5, 5);
+  --color-grey-1: rgb(25, 25, 25);
+  --color-grey-2: rgb(50, 50, 50);
+  --color-grey-3: rgb(75, 75, 75);
+  --color-grey-4: rgb(100, 100, 100);
+  --color-grey-5: rgb(125, 125, 125);
+  --color-grey-6: rgb(150, 150, 150);
+  --color-grey-7: rgb(175, 175, 175);
+  --color-grey-8: rgb(200, 200, 200);
+  --color-grey-9: rgb(225, 225, 225);
+  --color-grey-10: rgb(250, 250, 250);
+
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
@@ -117,6 +129,18 @@ body.test {
   --footer-background: rgba(10, 10, 10, 1);
   --footer-fade: linear-gradient(0deg, rgba(10, 10, 10, 1) 52%, rgba(10, 10, 10, 0.711922268907563) 72%, rgba(10, 10, 10, 0) 100%);
 
+  --color-grey-10: rgb(5, 5, 5);
+  --color-grey-9: rgb(25, 25, 25);
+  --color-grey-8: rgb(50, 50, 50);
+  --color-grey-7: rgb(75, 75, 75);
+  --color-grey-6: rgb(100, 100, 100);
+  --color-grey-5: rgb(125, 125, 125);
+  --color-grey-4: rgb(150, 150, 150);
+  --color-grey-3: rgb(175, 175, 175);
+  --color-grey-2: rgb(200, 200, 200);
+  --color-grey-1: rgb(225, 225, 225);
+  --color-grey-0: rgb(250, 250, 250);
+
   --header-background: #111;
   --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
@@ -127,7 +151,7 @@ body.test {
   --color-solid-half: rgb(14, 9, 9);
   --color-solid-1: rgb(35, 35, 35);
   --color-solid-2: rgb(39, 39, 39);
-  --color-solid-3: rgb(73, 73, 73);
+  --color-solid-3: rgb(50, 50, 50);
   --color-inverse: #fff;
   --color-inverse-1: #eee;
   --color-inverse-2: #ccc;
