--- a/src/scss/pages/_setup.scss
+++ b/src/scss/pages/_setup.scss
@@ -1,4 +1,5 @@
 .page-setup {
+  background-color: var(--color-solid) !important;
   .setup-main {
     flex-grow: 1;
     flex-shrink: 1;
@@ -27,7 +28,7 @@
     display: flex;
     flex-direction: column;
     transition: all 0.3s ease-in-out;
-    background-color: var(--local-background);
+    background-color: var(--bg-solid);
     color: var(--color-inverse);
     margin: 0 16px;
 
